[orga] fix contrast for dragged talks in schedule editor

--- a/src/pretalx/static/orga/scss/_schedule.scss
+++ b/src/pretalx/static/orga/scss/_schedule.scss
@@ -158,6 +158,7 @@ h3, .schedule-header, .schedule-alert {
   position: absolute;
   background: #1C4A3B;
   pointer-events: none;
+  color: white;
   z-index: 9001;
   width: auto;
 }
